@@ -1,3 +1,8 @@
+  16 Jul 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9.0.10.ebuild,
+  gitlab-ce-9.1.7.ebuild, gitlab-ce-9.2.7.ebuild, gitlab-ce-9.3.0_rc2.ebuild,
+  gitlab-ce-9.3.5.ebuild, gitlab-ce-9999.ebuild:
+  www-apps/gitlab-ce:  Switch to EAPI 6; this resolves #47.
+
   10 Jul 2017; Jerzy Kołosowski <jerzy@kolosowscy.pl> gitlab-ce-9.2.7.ebuild,
   gitlab-9.3.5.ebuild:
   www-apps/gitlab-ce:  Fix libgit dependencies
